--- a/TheTop150/src/ListPage/index.html
+++ b/TheTop150/src/ListPage/index.html
@@ -26,8 +26,7 @@
       <div id="navTabProfile">
       </div>      
     </div>
-    <div style="margin-top:180px">
-    </div>
+    <div style="margin-top:180px"></div>
       <div id="demo">Loading...</div>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
                                         
       <p style="margin-top:400px; text-align: center;font-size: 7px;">All credits of this project go to pete_#0056, ariunknown#3071, Tris#0595, Alkali#4442, Ark#4834, Little Crap#7450, Trickbot#1447, and my babe Papyrus12#6686. The github page can be found <a href="https://github.com/JacobJershin/The-Top-150">here</a></p>
