--- a/TheTop150/src/HomePage/index.html
+++ b/TheTop150/src/HomePage/index.html
@@ -95,7 +95,9 @@
             LevelSlot += "<div id='LevelPosition'><div id='rankNumber'>"+ (index +2)/2 +"</div> <div id='name'>"+LeaderboardArray[index]+"</div><div id='points'>"+LeaderboardArray[index + 1]+"p</div><div id='PFP'></div></div>"
         }
         document.getElementById("topTenScript").innerHTML = LevelSlot
-                                              </script>	
+        </script>	
+	  
+	  <style>
 	#TopThreeJSON{
 	    margin-top: 650px;
 	}
