--- a/TheTop150/src/ListPage/LevelPage/index.html
+++ b/TheTop150/src/ListPage/LevelPage/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://codermerlin.com/users/jacob-jershin/TheTop150/src/format.css">
     <link rel="stylesheet" href="format.css">
     <script src="https://codermerlin.com/users/jacob-jershin/TheTop150/src/levelDatabase.js"></script>
+    <script type="text/javascript" src="https://codermerlin.com/users/jacob-jershin/TheTop150/src/SheetsData.js"></script>
     <title>List Page</title>
 </head>
 <body onload="runIt()">
